# soc

./: meson.build  meson_options.txt
docs/: building.md  testing.md
rtl/: meson.build  soc.v
rtl/program_memory/: memory.hex  program_memory.v
src/: meson.build  simulator.cpp  utilities.cpp  utilities.h
src/verilog/: meson.build  testbench.h
tests/: meson.build  test_program_memory.cpp  test_soc.cpp
